--- a/blogLoiane/src/app/footer/footer.component.html
+++ b/blogLoiane/src/app/footer/footer.component.html
@@ -10,14 +10,16 @@
             <div class="col-md-12 d-flex justify-content-center">
 
                 <ul class="social-network">
-                    <li> <a href=" https://www.facebook.com/ " alvo=" _blank " class=" icoFacebook " title=" Facebook ">
+                    <li> <a href=" https://www.facebook.com/ " target=" _blank " class=" icoFacebook "
+                            title=" Facebook ">
                             <fa-icon [icon]=" faFacebook " class=" faFacebook fa-3x p-3 "> </fa-icon>
                         </a> </li>
-                    <li> <a href=" https://www.instagram.com/ " alvo=" _blank " class=" icoInstagram "
+                    <li> <a href=" https://www.instagram.com/ " target=" _blank " class=" icoInstagram "
                             title=" Instagram ">
                             <fa-icon [icon]=" faInstagram " class=" faInstagram fa-3x p-3 "> </fa-icon>
                         </a> </li>
-                    <li> <a href=" https://www.linkedin.com/ " alvo=" _blank " class=" icoLinkedin " title=" Linkedin ">
+                    <li> <a href=" https://www.linkedin.com/ " target=" _blank " class=" icoLinkedin "
+                            title=" Linkedin ">
                             <fa-icon [icon]=" faLinkedin " class=" faLinkedin fa-3x p-3 "> </fa-icon>
                         </a> </li>
                 </ul>
