Implementação de rotas

--- a/blogLoiane/src/app/navbar/navbar.component.html
+++ b/blogLoiane/src/app/navbar/navbar.component.html
@@ -10,11 +10,11 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link text-white text-monospace text-uppercase font-weight-bold p-3 texto"
-                        href="#">Home</a>
+                        routerLink='/home'>Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white text-monospace text-uppercase font-weight-bold p-3 texto"
-                        href="#">Feed</a>
+                        routerLink='/feed'>Feed</a>
                 </li>
             </ul>
         </div>
