--- a/blogLoiane/src/app/home/home.component.html
+++ b/blogLoiane/src/app/home/home.component.html
@@ -28,6 +28,7 @@
 
 <div class="row mt-5 mb-5">
     <div class="col-md-12 w-100 d-flex justify-content-center">
-        <button class="text-monospace text-uppercase btn btn-outline-dark font-weight-bold">Ver o Feed</button>
+        <button class="text-monospace text-uppercase btn btn-outline-dark font-weight-bold" routerLink='/feed'>Ver o
+            Feed</button>
     </div>
 </div>
