--- a/blogLoiane/src/app/navbar/navbar.component.html
+++ b/blogLoiane/src/app/navbar/navbar.component.html
@@ -16,6 +16,14 @@
                     <a class="nav-link text-white text-monospace text-uppercase font-weight-bold p-3 texto"
                         routerLink='/feed'>Feed</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white text-monospace text-uppercase font-weight-bold p-3 texto"
+                        routerLink='/login'>Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white text-monospace text-uppercase font-weight-bold p-3 texto"
+                        routerLink='/cadastro'>Cadastro</a>
+                </li>
             </ul>
         </div>
     </nav>
