--- a/blogLoiane/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blogLoiane/src/app/perfil-lateral/perfil-lateral.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="card-body">
-        <h5 class="card-title text-center text-monospace">Joyce Olympio</h5>
+        <h5 class="card-title text-center text-monospace">{{nome}}</h5>
         <p class="card-text text-center text-monospace"> Análista de Desenvolvimento na Stefanini Brasil.</p>
 
         <a href="#" class="btn btn-outline-info mb-3 d-flex justify-content-center" target="_blank">LinkedIn</a>
